# lightningchess

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  build.rs
migrations/: 20221106000404_intial_table.sql
protos/: lightning.proto
protos/invoicesrpc/: invoices.proto
src/: config.rs  guard.rs  main.rs  models.rs
src/db/: postgres.rs
src/endpoints/: callback.rs  challenge.rs  login.rs  mod.rs  money.rs  profile.rs  test
src/lightning/: hodl_invoices.rs  invoices.rs  mod.rs  payment.rs
templates/: index.html.hbs
