[package]
name = "lightningchess"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
base64 = "0.13"
chrono = { version = "0.4.19", features = ["serde"] }
cookie = "0.16"
rand = "0.8.5"
reqwest = { version = "0.11.12", features = ["json"] }
rocket = { version = "0.5.0-rc.1", features = ["secrets"] }
serde = "1.0.145"
serde_json = "1.0.85"
sha2 = "0.10"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres", "time", "chrono"] }
tokio = { version = "1", features = ["full"] }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars"]
